fixed image responsiveness on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -55,3 +55,14 @@ footer, h1, h2, h3, h4, h5, p, li, a{
 /* .typewrite{
     color: black;
 } */
+
+
+.socialLink{
+    margin-right: 35%;
+    margin-left: 0;
+}
+
+a{
+    width: 10%
+    /* margin-right: 100%; */
+}
